vyre-macros/tests/ui/bad_pass_on_enum.stderr
error: expected `struct`
 --> tests/ui/bad_pass_on_enum.rs:4:5
  |
4 | pub enum BadItemKind {
  |     ^^^^
